i18n: Fix layout issues and redactor crash

--- a/scp/css/scp.css
+++ b/scp/css/scp.css
@@ -915,7 +915,7 @@ ul.tabs li {
 }
 
 ul.tabs li a {
-    width:130px;
+    min-width:130px;
     font-weight:bold;
     padding:5px;
     height:18px;
